c2prj1_cards/grade.txt
Grading at Tue Jun 23 11:38:37 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:59:17: error: multi-character character constant [-Werror=multichar]
   if(value_let=='10')
                 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
